# c-collections

./: .gitignore  CMakeLists.txt
src/: common.h  linkedlist.c  linkedlist.h  list.c  list.h  stack.c  stack.h
tests/: list.c
